# authlete-python-django

./: CHANGES.ja.md  CHANGES.md  HOW-TO-RELEASE.md  Makefile  README.ja.md  README.md  pyproject.toml  setup.py
authlete/django/handler/: __init__.py  authorization_request_base_handler.py  authorization_request_decision_handler.py  authorization_request_error_handler.py  base_request_handler.py  claim_collector.py  configuration_request_handler.py  credential_issuer_jwks_request_handler.py  credential_issuer_metadata_request_handler.py  credential_jwt_issuer_metadata_request_handler.py  federation_configuration_request_handler.py  federation_registration_request_handler.py  introspection_request_handler.py  jwks_request_handler.py  no_interaction_handler.py  par_request_handler.py  revocation_request_handler.py  token_request_base_handler.py  token_request_handler.py  userinfo_request_handler.py
authlete/django/handler/spi/: __init__.py  authorization_request_decision_handler_spi.py  authorization_request_decision_handler_spi_adapter.py  authorization_request_handler_spi.py  authorization_request_handler_spi_adapter.py  no_interaction_handler_spi.py  no_interaction_handler_spi_adapter.py  token_request_handler_spi.py  token_request_handler_spi_adapter.py  user_claim_provider_spi.py  user_claim_provider_spi_adapter.py  userinfo_request_handler_spi.py  userinfo_request_handler_spi_adapter.py
authlete/django/web/: __init__.py  access_token_validator.py  basic_credentials.py  request_utility.py  response_utility.py
tests/django/web/: test_basic_credentials.py
