[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authlete-django"
version = "1.1.0"
dependencies = [
  "authlete>=1.3.0"
]
requires-python = ">= 3.8"
authors = [
  { name = "Authlete, Inc.", email = "admin@authlete.com" }
]
description = "Django library for Authlete"
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
  "OAuth",
  "OAuth 2.0",
  "OpenID",
  "OpenID Connect",
  "OIDC",
  "Django"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Topic :: Security"
]

[project.urls]
Homepage = "https://www.authlete.com/"
Repository = "https://github.com/authlete/authlete-python-django.git"

[tool.hatch.build.targets.wheel]
packages = [
  "/authlete"
]
